--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         }
     },
     "require": {
-        "symfony/framework-bundle": "^3.0 | ^4.0"
+        "php": ">= 7.1.3",
+        "symfony/framework-bundle": "^3.0 | ^4.0",
+        "symfony/http-foundation": "^3.0 | ^4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0"
