--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,10 @@
         }
     },
     "require": {
-        "php": ">= 7.1.3",
-        "symfony/framework-bundle": "^3.4 | ^4.0",
-        "symfony/http-foundation": "^3.4 | ^4.0"
+        "php": ">=7.4",
+        "symfony/framework-bundle": "^4.0 || ^5.0",
+        "symfony/http-foundation": "^4.0 || ^5.0",
+        "twig/twig": "^2.0 || ^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0"
